--- a/.github/workflows/atd_moped_build_stage.yml
+++ b/.github/workflows/atd_moped_build_stage.yml
@@ -94,40 +94,40 @@ jobs:
 #          clone_hasura_repo
 #          build_database
 #          run_database_migration
-  build_activity_log_sqs:
-    name: Build Activity Log SQS
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/setup-python@v2
-        with:
-          python-version: "3.8"
-          architecture: "x64"
-      # Get the code first
-      - name: "Checkout"
-        uses: actions/checkout@v2
-      # Then install the AWC CLI tools & boto3
-      - name: "Install CLI Requirements: AWS Cli"
-        run: |
-          sudo apt-get install python3-setuptools
-          pip3 install awscli boto3
-      # Run the shell commands using the AWS environment variables
-      - name: "Moped Database: Re-deploy"
-        env:
-          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          ATD_MOPED_EVENTS_ROLE: ${{ secrets.ATD_MOPED_EVENTS_ROLE }}
-          PR_NUMBER: ${{ github.event.pull_request.number }}
-          MOPED_TEST_STAGE: "TRUE"
-        run: |
-          export BRANCH_NAME=${GITHUB_REF##*/}
-          echo "Moped Test Build @ ${BRANCH_NAME}: ${{ github.event.inputs.description }}"
-          echo "SHA: ${GITHUB_SHA}"
-          echo "ACTION/BRANCH_NAME: ${BRANCH_NAME}"
-          echo "MOPED_PRNUM: ${MOPED_PRNUM}"
-          echo "PWD: $(pwd)"
-          source $(pwd)/.github/workflows/aws-moped-sqs-helper.sh
-          deploy_event_function "activity_log"
+#  build_activity_log_sqs:
+#    name: Build Activity Log SQS
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/setup-python@v2
+#        with:
+#          python-version: "3.8"
+#          architecture: "x64"
+#      # Get the code first
+#      - name: "Checkout"
+#        uses: actions/checkout@v2
+#      # Then install the AWC CLI tools & boto3
+#      - name: "Install CLI Requirements: AWS Cli"
+#        run: |
+#          sudo apt-get install python3-setuptools
+#          pip3 install awscli boto3
+#      # Run the shell commands using the AWS environment variables
+#      - name: "Moped Database: Re-deploy"
+#        env:
+#          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+#          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#          ATD_MOPED_EVENTS_ROLE: ${{ secrets.ATD_MOPED_EVENTS_ROLE }}
+#          PR_NUMBER: ${{ github.event.pull_request.number }}
+#          MOPED_TEST_STAGE: "TRUE"
+#        run: |
+#          export BRANCH_NAME=${GITHUB_REF##*/}
+#          echo "Moped Test Build @ ${BRANCH_NAME}: ${{ github.event.inputs.description }}"
+#          echo "SHA: ${GITHUB_SHA}"
+#          echo "ACTION/BRANCH_NAME: ${BRANCH_NAME}"
+#          echo "MOPED_PRNUM: ${MOPED_PRNUM}"
+#          echo "PWD: $(pwd)"
+#          source $(pwd)/.github/workflows/aws-moped-sqs-helper.sh
+#          deploy_event_function "activity_log"
   build_moped_test_api:
     name: Build Moped Test API
     runs-on: ubuntu-20.04
