added current phase to projects list view

--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -4525,6 +4525,7 @@
       - fiscal_year
       - is_retired
       - milestone_id
+      - phase_name
       - project_description
       - project_description_public
       - project_id
@@ -4554,6 +4555,7 @@
       - fiscal_year
       - is_retired
       - milestone_id
+      - phase_name
       - project_description
       - project_description_public
       - project_id
@@ -4583,6 +4585,7 @@
       - fiscal_year
       - is_retired
       - milestone_id
+      - phase_name
       - project_description
       - project_description_public
       - project_id
