--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -1027,69 +1027,76 @@
     permission:
       check: {}
       columns:
+      - component_id
+      - description
+      - name
       - project_component_id
       - project_id
-      - component_id
-      - name
-      - description
+      - status_id
       backend_only: false
   - role: moped-editor
     permission:
       check: {}
       columns:
+      - component_id
+      - description
+      - name
       - project_component_id
       - project_id
-      - component_id
-      - name
-      - description
+      - status_id
       backend_only: false
   select_permissions:
   - role: moped-admin
     permission:
       columns:
+      - component_id
+      - description
+      - name
       - project_component_id
       - project_id
-      - component_id
-      - name
-      - description
+      - status_id
       filter: {}
   - role: moped-editor
     permission:
       columns:
+      - component_id
+      - description
+      - name
       - project_component_id
       - project_id
-      - component_id
-      - name
-      - description
+      - status_id
       filter: {}
   - role: moped-viewer
     permission:
       columns:
+      - component_id
+      - description
+      - name
       - project_component_id
       - project_id
-      - component_id
-      - name
-      - description
+      - status_id
       filter: {}
   update_permissions:
   - role: moped-admin
     permission:
       columns:
+      - component_id
+      - description
+      - name
       - project_component_id
       - project_id
-      - component_id
-      - name
-      - description
+      - status_id
       filter: {}
       check: {}
   - role: moped-editor
     permission:
       columns:
+      - component_id
+      - description
+      - name
       - project_component_id
       - project_id
-      - component_id
-      - name
-      - description
+      - status_id
       filter: {}
       check: {}
 - table:
@@ -1106,6 +1113,7 @@
       columns:
       - component_subcomponent_id
       - project_component_id
+      - status_id
       - subcomponent_id
       backend_only: false
   - role: moped-editor
@@ -1114,6 +1122,7 @@
       columns:
       - component_subcomponent_id
       - project_component_id
+      - status_id
       - subcomponent_id
       backend_only: false
   select_permissions:
@@ -1122,6 +1131,7 @@
       columns:
       - component_subcomponent_id
       - project_component_id
+      - status_id
       - subcomponent_id
       filter: {}
   - role: moped-editor
@@ -1129,6 +1139,7 @@
       columns:
       - component_subcomponent_id
       - project_component_id
+      - status_id
       - subcomponent_id
       filter: {}
   - role: moped-viewer
@@ -1136,6 +1147,7 @@
       columns:
       - component_subcomponent_id
       - project_component_id
+      - status_id
       - subcomponent_id
       filter: {}
   update_permissions:
@@ -1144,6 +1156,7 @@
       columns:
       - component_subcomponent_id
       - project_component_id
+      - status_id
       - subcomponent_id
       filter: {}
       check: {}
@@ -1152,6 +1165,7 @@
       columns:
       - component_subcomponent_id
       - project_component_id
+      - status_id
       - subcomponent_id
       filter: {}
       check: {}
@@ -1510,6 +1524,13 @@
 - table:
     schema: public
     name: moped_proj_features_components
+  object_relationships:
+  - name: moped_proj_component
+    using:
+      foreign_key_constraint_on: moped_proj_component_id
+  - name: moped_proj_feature_object
+    using:
+      foreign_key_constraint_on: moped_proj_features_id
   array_relationships:
   - name: moped_proj_feature
     using:
