--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -36,11 +36,13 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.6",
+    "@date-io/date-fns": "^1.3.13",
     "@hookform/devtools": "^2.2.1",
     "@hookform/resolvers": "^1.0.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/pickers": "^3.3.10",
     "@material-ui/styles": "^4.10.0",
     "@turf/bbox": "^6.3.0",
     "apollo-boost": "^0.4.9",
