--- a/moped-editor/.env-cmdrc
+++ b/moped-editor/.env-cmdrc
@@ -32,7 +32,7 @@
     "REACT_APP_AWS_COGNITO_USER_POOL_ID": "us-east-1_U2dzkxfTv",
     "REACT_APP_AWS_COGNITO_APP_CLIENT_ID": "3u9n9373e37v603tbp25gs5fdc",
     "REACT_APP_HASURA_ENDPOINT": "https://atd-moped-editor-development.herokuapp.com/v1/graphql",
-    "REACT_APP_API_ENDPOINT": "https://moped-api-staging.austinmobility.io",
+    "REACT_APP_API_ENDPOINT": "https://moped-api-test.austinmobility.io",
     "REACT_APP_HASURA_ENV": "staging",
     "REACT_APP_AWS_CLOUDFRONT": "https://moped.austinmobility.io",
     "REACT_APP_AWS_COGNITO_REDIRET_SIGN_IN": "https://moped-test.austinmobility.io/moped/session/signin",
