Add missing environment variable

--- a/.github/workflows/atd_moped_build_stage.yml
+++ b/.github/workflows/atd_moped_build_stage.yml
@@ -72,6 +72,7 @@ jobs:
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
           HASURA_CONFIGURATION_DEVSTAGE: ${{ secrets.HASURA_CONFIGURATION_DEVSTAGE }}
+          ATD_MOPED_DEVSTAGE_HASURA_MOPED_API_APIKEY: ${{ secrets.ATD_MOPED_DEVSTAGE_HASURA_MOPED_API_APIKEY }}
           ATD_MOPED_DEVSTAGE_HASURA_GRAPHQL_ADMIN_SECRET: ${{ secrets.ATD_MOPED_DEVSTAGE_HASURA_GRAPHQL_ADMIN_SECRET }}
           ATD_MOPED_DEVSTAGE_HASURA_GRAPHQL_JWT_SECRET: ${{ secrets.ATD_MOPED_DEVSTAGE_HASURA_GRAPHQL_JWT_SECRET }}
           ATD_MOPED_DEVSTAGE_HASURA_CONFIGURATION: ${{ secrets.HASURA_CONFIGURATION_DEVSTAGE }}
