--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -69,6 +69,7 @@
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-error-boundary": "^3.1.3",
+    "react-error-overlay": "^6.0.9",
     "react-feather": "^2.0.8",
     "react-filepond": "^7.1.1",
     "react-helmet": "^6.1.0",
