--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -24,14 +24,16 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
+      ">0.3%",
+      "not ie 11",
       "not dead",
       "not op_mini all"
     ],
     "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+      ">0.3%",
+      "not ie 11",
+      "not dead",
+      "not op_mini all"
     ]
   },
   "dependencies": {
@@ -47,7 +49,7 @@
     "atd-kickstand": "github:cityofaustin/atd-kickstand#f71e4d3d6ddea09263410d93432c254ef2ed1793",
     "aws-amplify": "^3.3.4",
     "axios": "^0.21.1",
-    "chart.js": "^2.9.3",
+    "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
     "dompurify": "^2.2.8",
     "env-cmd": "^10.1.0",
@@ -86,6 +88,7 @@
   },
   "devDependencies": {
     "@hookform/devtools": "^2.2.1",
+    "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
