--- a/.github/workflows/atd_moped_build_stage.yml
+++ b/.github/workflows/atd_moped_build_stage.yml
@@ -66,7 +66,7 @@ jobs:
           sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys CC86BB64
           sudo add-apt-repository ppa:rmescandon/yq
           sudo apt update
-          sudo apt install yq -y
+          sudo apt install yq=3.3.2 -y
       # Run the shell commands using the AWS environment variables
       - name: "Moped Database: Re-deploy"
         env:
