Import environment variables

--- a/.github/workflows/atd_moped_build_stage.yml
+++ b/.github/workflows/atd_moped_build_stage.yml
@@ -73,6 +73,9 @@ jobs:
           ATD_MOPED_DEVSTAGE_HASURA_GRAPHQL_ADMIN_SECRET: ${{ secrets.ATD_MOPED_DEVSTAGE_HASURA_GRAPHQL_ADMIN_SECRET }}
           ATD_MOPED_DEVSTAGE_HASURA_GRAPHQL_JWT_SECRET: ${{ secrets.ATD_MOPED_DEVSTAGE_HASURA_GRAPHQL_JWT_SECRET }}
           ATD_MOPED_DEVSTAGE_HASURA_CONFIGURATION: ${{ secrets.HASURA_CONFIGURATION_DEVSTAGE }}
+          ATD_MOPED_DEVSTAGE_HASURA_MOPED_API_KEY: ${{ secrets.ATD_MOPED_DEVSTAGE_HASURA_MOPED_API_KEY }}
+          ATD_MOPED_DEVSTAGE_HASURA_MOPED_EVENTS_URL: ${{ secrets.ATD_MOPED_DEVSTAGE_HASURA_MOPED_EVENTS_URL }}
+          ATD_MOPED_DEVSTAGE_HASURA_MOPED_ACTIONS_URL: ${{ secrets.ATD_MOPED_DEVSTAGE_HASURA_MOPED_ACTIONS_URL }}
           MOPED_PRNUM: ${{ github.event.pull_request.number }}
           MOPED_PRBODY: ${{ github.event.pull_request.body }}
         run: |
