--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -84,6 +84,7 @@
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "^3.4.1",
+    "styled-components": "^5.3.0",
     "uuid": "^8.3.2",
     "yup": "^0.29.3"
   },
