--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -51,6 +51,7 @@
     "axios": "^0.21.1",
     "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
+    "date-fns": "^2.23.0",
     "dompurify": "^2.2.8",
     "env-cmd": "^10.1.0",
     "filepond": "^3.6.0",
