--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -2036,86 +2036,107 @@
     permission:
       check: {}
       columns:
-      - proj_funding_id
-      - funding_source_name
-      - funding_source_category
-      - project_id
-      - funding_source_other
-      - date_added
       - added_by
+      - date_added
+      - fund_dept_unit
+      - funding_amount
+      - funding_description
+      - funding_program_id
+      - funding_source_id
+      - funding_status_id
+      - proj_funding_id
+      - project_id
       backend_only: false
   - role: moped-editor
     permission:
       check: {}
       columns:
-      - proj_funding_id
-      - funding_source_name
-      - funding_source_category
-      - project_id
-      - funding_source_other
-      - date_added
       - added_by
+      - date_added
+      - fund_dept_unit
+      - funding_amount
+      - funding_description
+      - funding_program_id
+      - funding_source_id
+      - funding_status_id
+      - proj_funding_id
+      - project_id
       backend_only: false
   select_permissions:
   - role: moped-admin
     permission:
       columns:
-      - funding_source_other
       - added_by
+      - date_added
+      - fund_dept_unit
+      - funding_amount
+      - funding_description
+      - funding_program_id
+      - funding_source_id
+      - funding_status_id
       - proj_funding_id
       - project_id
-      - funding_source_category
-      - funding_source_name
-      - date_added
       filter: {}
       allow_aggregations: true
   - role: moped-editor
     permission:
       columns:
-      - funding_source_other
       - added_by
+      - date_added
+      - fund_dept_unit
+      - funding_amount
+      - funding_description
+      - funding_program_id
+      - funding_source_id
+      - funding_status_id
       - proj_funding_id
       - project_id
-      - funding_source_category
-      - funding_source_name
-      - date_added
       filter: {}
       allow_aggregations: true
   - role: moped-viewer
     permission:
       columns:
-      - proj_funding_id
-      - funding_source_name
-      - funding_source_category
-      - project_id
-      - funding_source_other
-      - date_added
       - added_by
+      - date_added
+      - fund_dept_unit
+      - funding_amount
+      - funding_description
+      - funding_program_id
+      - funding_source_id
+      - funding_status_id
+      - proj_funding_id
+      - project_id
       filter: {}
       allow_aggregations: true
   update_permissions:
   - role: moped-admin
     permission:
       columns:
-      - funding_source_other
       - added_by
+      - date_added
+      - fund_dept_unit
+      - funding_amount
+      - funding_description
+      - funding_program_id
+      - funding_source_id
+      - funding_status_id
       - proj_funding_id
       - project_id
-      - funding_source_category
-      - funding_source_name
-      - date_added
       filter: {}
       check: null
   - role: moped-editor
     permission:
       columns:
-      - funding_source_other
       - added_by
+      - date_added
+      - fund_dept_unit
+      - funding_amount
+      - funding_description
+      - funding_program_id
+      - funding_source_id
+      - funding_status_id
       - proj_funding_id
       - project_id
-      - funding_source_category
-      - funding_source_name
-      - date_added
       filter: {}
       check: null
   event_triggers:
