--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -3757,6 +3757,13 @@
         table:
           schema: public
           name: moped_proj_features
+  - name: moped_proj_notes
+    using:
+      foreign_key_constraint_on:
+        column: project_id
+        table:
+          schema: public
+          name: moped_proj_notes
   - name: moped_proj_personnel
     using:
       foreign_key_constraint_on:
