Add file type to file list and allow query of type via hasura

--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -4017,37 +4017,39 @@
     permission:
       check: {}
       columns:
-      - api_response
-      - create_date
-      - created_by
-      - file_description
-      - file_key
-      - file_metadata
-      - file_name
-      - file_permissions
-      - file_size
       - is_retired
       - is_scanned
+      - created_by
+      - file_size
+      - file_type
       - project_file_id
       - project_id
+      - api_response
+      - file_metadata
+      - file_permissions
+      - file_description
+      - file_key
+      - file_name
+      - create_date
       backend_only: false
   - role: moped-editor
     permission:
       check: {}
       columns:
-      - api_response
-      - create_date
-      - created_by
-      - file_description
-      - file_key
-      - file_metadata
-      - file_name
-      - file_permissions
-      - file_size
       - is_retired
       - is_scanned
+      - created_by
+      - file_size
+      - file_type
       - project_file_id
       - project_id
+      - api_response
+      - file_metadata
+      - file_permissions
+      - file_description
+      - file_key
+      - file_name
+      - create_date
       backend_only: false
   select_permissions:
   - role: moped-admin
@@ -4062,6 +4064,7 @@
       - file_name
       - file_permissions
       - file_size
+      - file_type
       - is_retired
       - is_scanned
       - project_file_id
@@ -4070,72 +4073,76 @@
   - role: moped-editor
     permission:
       columns:
-      - api_response
-      - create_date
-      - created_by
-      - file_description
-      - file_key
-      - file_metadata
-      - file_name
-      - file_permissions
-      - file_size
       - is_retired
       - is_scanned
+      - created_by
+      - file_size
+      - file_type
       - project_file_id
       - project_id
+      - api_response
+      - file_metadata
+      - file_permissions
+      - file_description
+      - file_key
+      - file_name
+      - create_date
       filter: {}
   - role: moped-viewer
     permission:
       columns:
-      - api_response
-      - create_date
-      - created_by
-      - file_description
-      - file_key
-      - file_metadata
-      - file_name
-      - file_permissions
-      - file_size
       - is_retired
       - is_scanned
+      - created_by
+      - file_size
+      - file_type
       - project_file_id
       - project_id
+      - api_response
+      - file_metadata
+      - file_permissions
+      - file_description
+      - file_key
+      - file_name
+      - create_date
       filter: {}
   update_permissions:
   - role: moped-admin
     permission:
       columns:
-      - api_response
-      - create_date
-      - created_by
-      - file_description
-      - file_key
-      - file_metadata
-      - file_name
-      - file_permissions
-      - file_size
       - is_retired
       - is_scanned
+      - created_by
+      - file_size
+      - file_type
       - project_file_id
       - project_id
+      - api_response
+      - file_metadata
+      - file_permissions
+      - file_description
+      - file_key
+      - file_name
+      - create_date
       filter: {}
       check: null
   - role: moped-editor
     permission:
       columns:
-      - api_response
-      - create_date
-      - created_by
-      - file_description
-      - file_key
-      - file_metadata
-      - file_name
-      - file_permissions
-      - file_size
       - is_retired
       - is_scanned
+      - created_by
+      - file_size
+      - file_type
       - project_file_id
       - project_id
+      - api_response
+      - file_metadata
+      - file_permissions
+      - file_description
+      - file_key
+      - file_name
+      - create_date
       filter: {}
       check: null
   event_triggers:
