--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -3649,6 +3649,13 @@
         table:
           schema: public
           name: moped_proj_personnel
+  - name: moped_proj_phases
+    using:
+      foreign_key_constraint_on:
+        column: project_id
+        table:
+          schema: public
+          name: moped_proj_phases
   insert_permissions:
   - role: moped-admin
     permission:
