--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -4364,6 +4364,93 @@
       check: null
 - table:
     schema: public
+    name: moped_types
+  insert_permissions:
+  - role: moped-admin
+    permission:
+      check: {}
+      columns:
+      - type_name
+      - type_id
+      - active_type
+      - on_street
+      - sensitivity
+      - type_order
+      - date_added
+      backend_only: false
+  - role: moped-editor
+    permission:
+      check: {}
+      columns:
+      - type_name
+      - type_id
+      - active_type
+      - on_street
+      - sensitivity
+      - type_order
+      - date_added
+      backend_only: false
+  select_permissions:
+  - role: moped-admin
+    permission:
+      columns:
+      - type_name
+      - type_id
+      - active_type
+      - on_street
+      - sensitivity
+      - type_order
+      - date_added
+      filter: {}
+  - role: moped-editor
+    permission:
+      columns:
+      - type_name
+      - type_id
+      - active_type
+      - on_street
+      - sensitivity
+      - type_order
+      - date_added
+      filter: {}
+  - role: moped-viewer
+    permission:
+      columns:
+      - type_name
+      - type_id
+      - active_type
+      - on_street
+      - sensitivity
+      - type_order
+      - date_added
+      filter: {}
+  update_permissions:
+  - role: moped-admin
+    permission:
+      columns:
+      - type_name
+      - type_id
+      - active_type
+      - on_street
+      - sensitivity
+      - type_order
+      - date_added
+      filter: {}
+      check: {}
+  - role: moped-editor
+    permission:
+      columns:
+      - type_name
+      - type_id
+      - active_type
+      - on_street
+      - sensitivity
+      - type_order
+      - date_added
+      filter: {}
+      check: {}
+- table:
+    schema: public
     name: moped_users
   object_relationships:
   - name: moped_workgroup
